I HAVE SUCCESSFULLY MADE POSTS WORK SUCK MY BALS

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,4 +80,9 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/registerSuccess" />
 </LinearLayout>
