--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8E44AD</color>
-    <color name="colorPrimaryDark">#D5F5E3</color>
-    <color name="colorAccent">#2980B9</color>
+    <color name="colorPrimary">#28D455</color>
+    <color name="colorPrimaryDark">#5DBCD2</color>
+    <color name="colorAccent">#FF4081</color>
 </resources>
