Old code gone and changed intent
Got rid of the old "enter text" and send button that was useless to our project. I also changed the "plan workout" button to now go to the user profile page so the app is much smoother.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,24 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <EditText android:id="@+id/edit_message"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/edit_message" />
-
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/button_send"
-            android:onClick="sendMessage"
-            android:layout_weight="1" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/planner_page_send"
-            android:onClick="plannerPage"
+            android:text="User Profile"
+            android:onClick="userPage"
             android:layout_weight="1" />
 
         <Button
