--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8E44AD</color>
-    <color name="colorPrimaryDark">#D5F5E3</color>
-    <color name="colorAccent">#2980B9</color>
+    <color name="colorPrimary">#28D455</color>
+    <color name="colorPrimaryDark">#828282</color>
+    <color name="colorAccent">#FF4081</color>
+	
+    <color name="btn_bg_en">#7EA43C</color>
+    <color name="btn_bg_pressed">#A82E26</color>
+    <color name="btn_bg_unen">#484848</color>
 </resources>
