--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -15,6 +15,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
         <Button
+            android:id="@+id/back_to_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:onClick="back_to_main"
+            android:text="Back to Main"
+            android:textStyle="bold" />
+        <Button
             android:id="@+id/user_Add_Workout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
