--- a/app/src/main/res/layout/activity_pedometer.xml
+++ b/app/src/main/res/layout/activity_pedometer.xml
@@ -80,7 +80,7 @@
                 android:padding="5dip"
                 android:text="@string/start"
                 android:textColor="@android:color/white"
-                android:textSize="25sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
             <Button
@@ -94,9 +94,47 @@
                 android:padding="5dip"
                 android:text="@string/pause"
                 android:textColor="@android:color/white"
-                android:textSize="25sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@id/btn_row"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dip"
+            android:layout_marginRight="15dip"
+            android:layout_marginTop="5dip" >
+
+            <Button
+                android:id="@id/settings"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dip"
+                android:layout_weight="1"
+                android:background="@drawable/btn_bg"
+                android:onClick="onClick"
+                android:padding="5dip"
+                android:text="@string/settings"
+                android:textColor="@android:color/white"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@id/view_more"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dip"
+                android:layout_weight="1"
+                android:background="@drawable/btn_bg"
+                android:onClick="onClick"
+                android:padding="5dip"
+                android:text="@string/view_more"
+                android:textColor="@android:color/white"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
